src/test/ui/issues/issue-43733.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/issue-43733.rs:18:5
   |
LL |     __KEY.get(Default::default)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/issue-43733.rs:22:5
   |
LL |     std::thread::LocalKey::new(__getit);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
